--- a/style.css
+++ b/style.css
@@ -81,6 +81,97 @@ i {
     display: none;
   }
 }
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 1em;
+}
+
+.bg-home {
+  position: relative;
+}
+
+.bg-home::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-image: linear-gradient(to bottom, rgba(6, 18, 30, 0.1), #06121e), url("../assets/bg.svg");
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.9;
+  background-position: center top;
+}
+
+.hero {
+  color: #fefbff;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+}
+.hero h1 {
+  text-align: center;
+  line-height: 150%;
+  max-width: 940px;
+  font-size: 2.7rem;
+}
+.hero p {
+  text-align: center;
+  margin: 1em 0;
+}
+
+.button-contact {
+  padding: 1em 2em;
+  color: #fff;
+  background-color: #d94110;
+  opacity: 0.7;
+  border: 0;
+  font-size: 1.175rem;
+  font-weight: 600;
+  margin: 1em 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.button-contact:hover {
+  animation: scaleButton 0.8s alternate infinite;
+  opacity: 1;
+  border-radius: 15px;
+}
+
+@keyframes scaleButton {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.07);
+  }
+}
+@media screen and (max-width: 768px) {
+  .hero {
+    min-height: 60vh;
+  }
+  .hero h1 {
+    line-height: 120%;
+    font-size: 2rem;
+    padding: 0 1em;
+    width: 100%;
+  }
+  .hero p {
+    font-size: 0.9rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero h1 {
+    font-size: 1.5rem;
+  }
+}
 body {
   font-family: "Sora", sans-serif;
   width: 100%;
