--- a/style.css
+++ b/style.css
@@ -172,6 +172,42 @@ i {
     font-size: 1.5rem;
   }
 }
+.about {
+  background-color: #06121e;
+  overflow: hidden;
+  color: #fff;
+}
+
+.about-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  padding: 2em 1.5em 4em 1.5em;
+}
+.about-content img {
+  max-width: 570px;
+  opacity: 0.9;
+}
+
+.about-content div {
+  flex: 1;
+}
+
+.about-description h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5em;
+}
+.about-description p {
+  margin-bottom: 1em;
+  line-height: 150%;
+}
+
+@media screen and (max-width: 768px) {
+  .about-content {
+    flex-direction: column;
+  }
+}
 body {
   font-family: "Sora", sans-serif;
   width: 100%;
