--- a/partials/_colors.scss
+++ b/partials/_colors.scss
@@ -11,7 +11,7 @@ $black-dark: #161617;
 $black-light: #353436;
 
 $white-normal: #fff;
-$white-drak: #edeaef;
+$white-dark: #edeaef;
 $white-light: #fefbff;
 
 $red-normal: #d94110;
