--- a/style.css
+++ b/style.css
@@ -208,6 +208,145 @@ i {
     flex-direction: column;
   }
 }
+.services {
+  background-color: #fff;
+  color: #232224;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 3em 1em;
+}
+
+.services-content h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 1em;
+}
+
+.services-content p {
+  line-height: 150%;
+  margin-bottom: 1em;
+  text-align: center;
+  max-width: 780px;
+}
+
+.haircuts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  padding: 0 3em 2em 3em;
+}
+
+.haircut {
+  flex: 1;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px -1px 7px rgba(0, 0, 0, 0.527);
+  overflow: hidden;
+}
+.haircut img {
+  width: 100%;
+  max-width: 354px;
+  transition: transform 0.4s;
+}
+
+.haircut img:hover {
+  transform: scale(1.2);
+  z-index: 1;
+}
+
+.haircut-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  background-color: #fff;
+  z-index: 99;
+}
+.haircut-info button {
+  color: #fff;
+  background-color: #d94110;
+  padding: 0.3em 0.6em;
+  border-radius: 4px;
+  border: 0;
+  cursor: default;
+}
+
+@media screen and (max-width: 768px) {
+  .haircuts {
+    flex-direction: column;
+  }
+  .haircut {
+    max-width: 700px;
+  }
+}
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 3em 0;
+  gap: 1.3em;
+  color: #fff;
+}
+
+.footer-icons {
+  display: flex;
+  gap: 1em;
+}
+
+.img-whats {
+  max-width: 74px;
+  transition: transform 0.4s;
+}
+
+.img-whats:hover {
+  transform: scale(1.3);
+}
+
+.btn-whatsapp {
+  position: fixed;
+  bottom: 2em;
+  right: 2em;
+  z-index: 99;
+}
+
+.btn-whatsapp .tooltip-text {
+  visibility: hidden;
+  position: absolute;
+  width: 120px;
+  top: -39px;
+  left: -120px;
+  background-color: #edeaef;
+  color: #232224;
+  text-align: center;
+  padding: 0.5em;
+  border-radius: 8px 8px 0px 8px;
+  border: 1px solid #232224;
+  opacity: 0;
+  transition: opacity 0.6s ease-in-out;
+}
+
+.btn-whatsapp:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .img-whats {
+    max-width: 65px;
+  }
+  .btn-whatsapp {
+    position: fixed;
+    bottom: 0em;
+  }
+}
 body {
   font-family: "Sora", sans-serif;
   width: 100%;
